fixed timebar z-indexes

--- a/src/timebar/charts/highlighter.module.css
+++ b/src/timebar/charts/highlighter.module.css
@@ -13,7 +13,7 @@
 .tooltipContainer {
   pointer-events: none;
   top: -23px;
-  z-index: 10;
+  z-index: var(--timebar-z-highlighter-tooltips);
 }
 
 .tooltip {
